fix safari border radius overflow, flex gap, full height firefox mobile issues

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,3 +6,10 @@ html {
   scroll-behavior: smooth;
   scrollbar-width: none;
 }
+
+//Setting height to 100%
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
+  height: 100%;
+}
